Bug 284884 - KOrganizer is not showing some recurring meetings
Summary: KOrganizer is not showing some recurring meetings
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: DAV Resource (other bugs)
Version First Reported In: GIT (master)
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Sergio Martins
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-24 16:35 UTC by Jeffrey Bastian
Modified: 2014-09-08 09:03 UTC (History)
12 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14.1
Sentry Crash Report:


Attachments
ics of missing recurring meeting (2.00 KB, text/plain)
2011-10-24 16:35 UTC, Jeffrey Bastian
Details
Missing VEVENT (2.53 KB, text/plain)
2012-11-07 19:42 UTC, Kevin Clevenger
Details
Missing event #2 (2.80 KB, text/plain)
2013-03-26 15:37 UTC, Kevin Clevenger
Details
Additional missing event (3.85 KB, text/calendar)
2013-03-27 04:25 UTC, Kevin Clevenger
Details
missing recurring vevent (762 bytes, text/plain)
2013-07-31 17:01 UTC, Till Schäfer
Details
this week in korganizer (zimbra caldav) (19.58 KB, image/png)
2013-11-07 09:33 UTC, Martin Kyral
Details
this week in zimbra (29.22 KB, image/png)
2013-11-07 09:34 UTC, Martin Kyral
Details
the week in korganizer (patched) (34.45 KB, image/png)
2013-11-14 14:41 UTC, Martin Kyral
Details
proposed patch w/ fixes for the issues from the review (4.30 KB, patch)
2013-12-04 15:18 UTC, Martin Kyral
Details
git diff > recurrence-id-v2.patch (4.31 KB, patch)
2013-12-05 08:44 UTC, Martin Kyral
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jeffrey Bastian 2011-10-24 16:35:30 UTC
Created attachment 64839 [details]
ics of missing recurring meeting

Version:           4.7 (using KDE 4.7.2) 
OS:                Linux

Now that Akonadi supports CalDAV, I tried switching to KOrganizer today (from
Thunderbird+Lightning) and configured it to use my Zimbra calendar over CalDAV.

I noticed a few recurring meetings were missing from my calendar.  They show up
once on September 15 and 16, and if I open them the Recurrence tab shows
"Repeat: Never".

Zimbra, Thunderbird, and Evolution all display the events correctly, but
KOrganizer seems confused.

I managed to find the ics file on the Zimbra server for the meeting (using Konqueror and webdav), and after stripping the details, I've attached it here.

I see something interesting about this file that's different from the hundreds
of other ICS files: there are 2 almost identical VEVENT entries but only the
first one has an RRULE.

$ egrep 'VEVENT|RRULE' bad-recurrence.ics 
<snip timezones>
BEGIN:VEVENT
RRULE:FREQ=WEEKLY
END:VEVENT
BEGIN:VEVENT
END:VEVENT

My other missing recurring meetings also have 2 VEVENTs but only one RRULE.

Reproducible: Always

Steps to Reproduce:
It happens for every meeting with two VEVENTs but only one has an RRULE, but I don't know how these meetings were created with this state.

Actual Results:  
Only one instance of the meeting appears in KOrganizer.

Expected Results:  
All recurrences are shown.
Comment 1 Kevin Clevenger 2012-10-24 16:52:27 UTC
This is still happening on 4.9.2 (F17, X86_64, KDE from kde-redhat.org). 

Some recurring meeting show in Korganizer, some don't. This really needs to be looked into as it renders Korganizer unreliable and therefore unusable.
Comment 2 Sergio Martins 2012-10-24 21:20:58 UTC
(In reply to comment #1)
> This is still happening on 4.9.2 (F17, X86_64, KDE from kde-redhat.org). 
> 
> Some recurring meeting show in Korganizer, some don't. This really needs to
> be looked into as it renders Korganizer unreliable and therefore unusable.

Kevin, can you post your VEVENT too ?
Comment 3 Kevin Clevenger 2012-11-07 19:42:57 UTC
Created attachment 75086 [details]
Missing VEVENT

Sorry for the delay on this ... Here's a good example. This event *never* shows up in KO/Kontact, but shows up fine within Zimbra. I tried to alter it as little as possible, only changing names for people, email addresses, and the event title.
Comment 4 Sergio Martins 2012-11-14 23:45:27 UTC
(In reply to comment #3)
> Created attachment 75086 [details]
> Missing VEVENT
> 
> Sorry for the delay on this ... Here's a good example. This event *never*
> shows up in KO/Kontact, but shows up fine within Zimbra. I tried to alter it
> as little as possible, only changing names for people, email addresses, and
> the event title.

Appears fine for me.
Comment 5 Sergio Martins 2012-11-14 23:57:05 UTC
There are two events with the same UID in the first attachment.
One has a recurrence-id.
Kontact doesn't have recurrence id support yet.
Comment 6 Heiner Markert 2013-01-26 11:35:34 UTC
I am also experiencing this bug (KDE 4.8.5), in combination with a SOGo server. Unfortunately, this renders kontact useless to me, although I really like it in all other aspects.
Comment 7 Kevin Clevenger 2013-02-08 16:36:59 UTC
Is there any update on support for RECURRENCE-ID? Is there a specific upcoming korganizer version expected where this will be included? In order for korganizer to play well in the enterprise RECURRENCE-ID is a must-have.
Comment 8 D. Michael McFarland 2013-03-14 20:25:36 UTC
I've just encountered this behanior (in KDE 4.9.5 on Linux Mint).  Recurring events created using Lightning in a CalDAV calendar hosted at fruux never appear in Korganizer (or at least I haven't found a counterexample).  I would love to see this fixed/added, as KO seems to be otherwise a beautiful piece of work.
Comment 9 Kevin Clevenger 2013-03-26 15:37:01 UTC
Created attachment 78398 [details]
Missing event #2

The frustrating part is that the events are there when doing the initial import (wiping all Akonadi config and creating a new CalDav source, etc). After rebooting and restarting Korganizer the events are magically gone from Korganizer, but are still on the Zimbra server.
Comment 10 Kevin Clevenger 2013-03-27 04:25:25 UTC
Created attachment 78414 [details]
Additional missing event

This event is daily for several days. It doesn't show up at all even on a delete of all Akonadi info and clean re-add of the CalDav source.
Comment 11 Martin Kyral 2013-07-26 11:30:06 UTC
This is still an issue with Fedora 19 and KDE 4.10.95. Very annoying issue, however, as it makes KOrganizer inreliable.

Sometimes KOrganizer behaves weird - the organizer of an missing recurring event resent me the invitation yesterday, I accepted it - great, it's back on the list. A while later, the original missing event re-appeared magically, so it is displayed two times in the calendar now. 
In Zimbra web UI, I see the event just once all the time (when it was not visible in KOrganizer, when it was there once, and now when it is there two times).
Comment 12 Sergio Martins 2013-07-26 11:40:36 UTC
(In reply to comment #11)
> This is still an issue with Fedora 19 and KDE 4.10.95. Very annoying issue,
> however, as it makes KOrganizer inreliable.
Which resource are you using ? DAV ?
Comment 13 Till Schäfer 2013-07-31 16:39:57 UTC
*** This bug has been confirmed by popular vote. ***
Comment 14 Till Schäfer 2013-07-31 16:47:37 UTC
same issue here with KDE 4.10.5 on Gentoo using the CalDav recourse (davical server)
Comment 15 Till Schäfer 2013-07-31 17:01:42 UTC
Created attachment 81486 [details]
missing recurring vevent
Comment 16 Martin Kyral 2013-08-01 13:52:50 UTC
> Which resource are you using ? DAV ?

Yes, DAV
Comment 17 Till Schäfer 2013-08-22 11:40:18 UTC
bug is still valid for kde 4.11.0
Comment 18 Martin Kyral 2013-11-07 09:33:48 UTC
Created attachment 83396 [details]
this week in korganizer (zimbra caldav)
Comment 19 Martin Kyral 2013-11-07 09:34:17 UTC
Created attachment 83397 [details]
this week in zimbra
Comment 20 Martin Kyral 2013-11-07 09:35:32 UTC
Just to demonstrate how serious this issue is: this week, all the recurring events from my calendar are gone.
Comment 21 am@yahoo 2013-11-11 15:14:08 UTC
bug is still valid for kde 4.11.3
Comment 22 Martin Kyral 2013-11-14 14:41:54 UTC
Created attachment 83562 [details]
the week in korganizer (patched)

With the patch from: 
https://git.reviewboard.kde.org/r/113374/ applied on sources from kdepim-runtime-4.11.3-1.fc19.src.rpm, the look on my calendar looks way better. However, still the exceptional instances of the recurring events are filtered-out (those having the red arrow-circle in the zimbra screenshot)
Comment 23 Eric Renfro 2013-11-14 15:48:40 UTC
I'm having the same problem with KDE 4.11.2 and 4.11.3.

My DavCal source is via davmail, which works for every other calendar based application so far.. Thunderbird+Lightning, Evolution, etc.
Comment 24 Martin Kyral 2013-12-04 15:18:34 UTC
Created attachment 83924 [details]
proposed patch w/ fixes for the issues from the review

I am _VERY_ interested in fixing this bug. As the author of the initial patch in the review is not responding there, I tried to fix the issues Sergio found in the review (https://git.reviewboard.kde.org/r/113374/ ) myself to push the work forward. I am testing it and so far it seems to work...
I suppose further work will be needed to fix the bugginess mentioned by Philipp Schmidt in the review description and also because the fix is just partial: exceptions in the recurring evens are still filtered out. I'd be glad if anyone can help me fixing this.

Sergio: could you, please, review this patch? Shall I fire another review for this or it can be handled in the original one somehow?
Comment 25 Sergio Martins 2013-12-04 17:59:35 UTC
(In reply to comment #24)
> Created attachment 83924 [details]
> proposed patch w/ fixes for the issues from the review
> 
> I am _VERY_ interested in fixing this bug. As the author of the initial
> patch in the review is not responding there, I tried to fix the issues
> Sergio found in the review (https://git.reviewboard.kde.org/r/113374/ )
> myself to push the work forward. I am testing it and so far it seems to
> work...
> I suppose further work will be needed to fix the bugginess mentioned by
> Philipp Schmidt in the review description and also because the fix is just
> partial: exceptions in the recurring evens are still filtered out. I'd be
> glad if anyone can help me fixing this.
> 
> Sergio: could you, please, review this patch? Shall I fire another review
> for this or it can be handled in the original one somehow?

Patch doesn't apply, can you run "git diff > a.diff" and attach this file ?
with an updated master or 4.12 branch

Thanks
Comment 26 Martin Kyral 2013-12-05 08:44:09 UTC
Created attachment 83940 [details]
git diff > recurrence-id-v2.patch

patch against updated master
Comment 27 Sergio Martins 2013-12-05 19:03:20 UTC
Can you push a new review to code review ? I'm going send the DAV maintainer an e-mail ...
Comment 28 Martin Kyral 2013-12-09 08:43:37 UTC
I just created a review so we can discuss the code there. Hopefully, we'll be able to get it in 100% working state so this annoying bug becomes history soon.
https://git.reviewboard.kde.org/r/114357/
Comment 29 Grégory Oestreicher 2014-09-05 18:21:25 UTC
Git commit b8e7333eabe9765e23b89a936d50000fc9f027d0 by Grégory Oestreicher.
Committed on 05/09/2014 at 18:18.
Pushed by goestreicher into branch 'KDE/4.14'.

Parse resources containing multiple VEVENT

If the VCALENDAR contains multiple VEVENT then parse them
and apply exceptions accordingly. Updates and deletions
also preserve the multiple VEVENT in a single resource.

Thanks to Philipp Schmidt and Martyn Kyral for their work
to provide an initial patch on which to elaborate further.
Related: bug 296489
REVIEW: 114357
FIXED-IN: 4.14.1

M  +90   -3    resources/dav/common/davutils.cpp
M  +8    -1    resources/dav/common/davutils.h
M  +5    -0    resources/dav/common/etagcache.cpp
M  +5    -0    resources/dav/common/etagcache.h
M  +176  -70   resources/dav/resource/davgroupwareresource.cpp
M  +16   -3    resources/dav/resource/davgroupwareresource.h

http://commits.kde.org/kdepim-runtime/b8e7333eabe9765e23b89a936d50000fc9f027d0
Comment 30 Martin Kyral 2014-09-08 09:03:10 UTC
(In reply to Grégory Oestreicher from comment #29)
> Git commit b8e7333eabe9765e23b89a936d50000fc9f027d0 by Grégory Oestreicher.
> Committed on 05/09/2014 at 18:18.
> Pushed by goestreicher into branch 'KDE/4.14'.
> 
> Parse resources containing multiple VEVENT
> 
> If the VCALENDAR contains multiple VEVENT then parse them
> and apply exceptions accordingly. Updates and deletions
> also preserve the multiple VEVENT in a single resource.
> 
> Thanks to Philipp Schmidt and Martyn Kyral for their work
> to provide an initial patch on which to elaborate further.
> Related: bug 296489
> REVIEW: 114357
> FIXED-IN: 4.14.1
> 
> M  +90   -3    resources/dav/common/davutils.cpp
> M  +8    -1    resources/dav/common/davutils.h
> M  +5    -0    resources/dav/common/etagcache.cpp
> M  +5    -0    resources/dav/common/etagcache.h
> M  +176  -70   resources/dav/resource/davgroupwareresource.cpp
> M  +16   -3    resources/dav/resource/davgroupwareresource.h
> 
> http://commits.kde.org/kdepim-runtime/
> b8e7333eabe9765e23b89a936d50000fc9f027d0

Thanks for submitting the patch, however - was it further elaborated? The patch from the review is suffering by incompleteness (events having exception are still ommitted from the calendar) and b) heavy memory leaks (the leaks may have been fixed in the Akonadi, though)