Parse resources containing multiple VEVENT

If the VCALENDAR contains multiple VEVENT then parse them
and apply exceptions accordingly. Updates and deletions
also preserve the multiple VEVENT in a single resource.

Thanks to Philipp Schmidt and Martyn Kyral for their work
to provide an initial patch on which to elaborate further.

BUG: 284884
BUG: 296489
REVIEW: 114357
FIXED-IN: 4.14.1